infra/k8s/nestjs-app-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-app-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nestjs-app
  template:
    metadata:
      labels:
        app: nestjs-app
    spec:
      containers:
        - name: nestjs-app
          image: reddokk/nestjs-app
---
apiVersion: v1
kind: Service
metadata:
  name: nestjs-app-srv
spec:
  selector:
    app: nestjs-app
  ports:
    - name: nestjs-app
      protocol: TCP
      port: 3000
      targetPort: 3000
