infra/k8s/nextjs-app-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-app-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs-app
  template:
    metadata:
      labels:
        app: nextjs-app
    spec:
      containers:
        - name: nextjs-app
          image: reddokk/nextjs-app
---
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app-srv
spec:
  selector:
    app: nextjs-app
  ports:
    - name: nextjs-app
      protocol: TCP
      port: 3000
      targetPort: 3000
